--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-Django==1.11.4
+dj-database-url==0.4.2
+Django==2.0.2
 gunicorn==19.7.1
-pytz==2017.2
-whitenoise==3.3.0
+psycopg2==2.7.4
+python-decouple==3.1
+pytz==2018.3
+whitenoise==3.3.1
